Here's the commented version of the code:

```c++
// Copyright 2021 gRPC authors.

#ifndef GRPC_SRC_CPP_EXT_FILTERS_CENSUS_OPEN_CENSUS_CALL_TRACER_H
#define GRPC_SRC_CPP_EXT_FILTERS_CENSUS_OPEN_CENSUS_CALL_TRACER_H

#include <grpc/support/port_platform.h>
#include <grpc/support/time.h>
#include <grpcpp/opencensus.h>
#include <stdint.h>

#include <atomic>
#include <memory>
#include <string>

#include "absl/base/thread_annotations.h"
#include "absl/status/status.h"
#include "absl/strings/string_view.h"
#include "absl/time/time.h"
#include "opencensus/trace/span.h"
#include "opencensus/trace/span_context.h"
#include "opencensus/trace/span_id.h"
#include "opencensus/trace/trace_id.h"
#include "src/core/call/metadata_batch.h"
#include "src/core/lib/iomgr/error.h"
#include "src/core/lib/resource_quota/arena.h"
#include "src/core/lib/slice/slice.h"
#include "src/core/lib/slice/slice_buffer.h"
#include "src/core/lib/transport/transport.h"
#include "src/core/telemetry/call_tracer.h"
#include "src/core/telemetry/tcp_tracer.h"
#include "src/core/util/sync.h"

// Argument key for enabling observability features
#define GRPC_ARG_ENABLE_OBSERVABILITY "grpc.experimental.enable_observability"

namespace grpc {
namespace internal {

// OpenCensusCallTracer implements client-side call tracing using OpenCensus.
// It tracks RPC calls and their attempts for observability purposes.
class OpenCensusCallTracer : public grpc_core::ClientCallTracer {
 public:
  // OpenCensusCallAttemptTracer traces individual RPC attempts within a call.
  class OpenCensusCallAttemptTracer : public CallAttemptTracer {
   public:
    OpenCensusCallAttemptTracer(OpenCensusCallTracer* parent,
                                uint64_t attempt_num, bool is_transparent_retry,
                                bool arena_allocated);

    // Returns the trace ID in hexadecimal format.
    std::string TraceId() override {
      return context_.Context().trace_id().ToHex();
    }

    // Returns the span ID in hexadecimal format.
    std::string SpanId() override {
      return context_.Context().span_id().ToHex();
    }

    // Returns whether this span is sampled for tracing.
    bool IsSampled() override { return context_.Span().IsSampled(); }

    // Records the sending of initial metadata.
    void RecordSendInitialMetadata(
        grpc_metadata_batch* send_initial_metadata) override;
    // Records the sending of trailing metadata (no-op in this implementation).
    void RecordSendTrailingMetadata(
        grpc_metadata_batch* ) override {}
    // Records the sending of a message.
    void RecordSendMessage(const grpc_core::Message& send_message) override;
    // Records the sending of a compressed message.
    void RecordSendCompressedMessage(
        const grpc_core::Message& send_compressed_message) override;
    // Records the receipt of initial metadata (no-op in this implementation).
    void RecordReceivedInitialMetadata(
        grpc_metadata_batch* ) override {}
    // Records the receipt of a message.
    void RecordReceivedMessage(const grpc_core::Message& recv_message) override;
    // Records the receipt of a decompressed message.
    void RecordReceivedDecompressedMessage(
        const grpc_core::Message& recv_decompressed_message) override;
    // Records the receipt of trailing metadata and final status.
    void RecordReceivedTrailingMetadata(
        absl::Status status, grpc_metadata_batch* recv_trailing_metadata,
        const grpc_transport_stream_stats* transport_stream_stats) override;
    // Records incoming bytes for the attempt.
    void RecordIncomingBytes(
        const TransportByteSize& transport_byte_size) override;
    // Records outgoing bytes for the attempt.
    void RecordOutgoingBytes(
        const TransportByteSize& transport_byte_size) override;
    // Records cancellation of the attempt.
    void RecordCancel(grpc_error_handle cancel_error) override;
    // Records the end of the attempt.
    void RecordEnd() override;
    // Records a text annotation.
    void RecordAnnotation(absl::string_view annotation) override;
    // Records a structured annotation.
    void RecordAnnotation(const Annotation& annotation) override;
    // Starts a new TCP trace for this attempt.
    std::shared_ptr<grpc_core::TcpCallTracer> StartNewTcpTrace() override;
    // Sets an optional label (no-op in this implementation).
    void SetOptionalLabel(OptionalLabelKey,
                          grpc_core::RefCountedStringValue) override {}

    // Returns the CensusContext for this attempt.
    experimental::CensusContext* context() { return &context_; }

   private:
    // Maximum length for trace context headers
    static constexpr uint32_t kMaxTraceContextLen = 64;

    // Maximum length for tags
    static constexpr uint32_t kMaxTagsLen = 2048;
    
    // Parent call tracer that owns this attempt
    OpenCensusCallTracer* parent_;
    // Whether this tracer was allocated from an arena
    const bool arena_allocated_;
    // OpenCensus context for this attempt
    experimental::CensusContext context_;

    // Time when the attempt started
    absl::Time start_time_;

    // Count of received messages
    uint64_t recv_message_count_ = 0;
    // Count of sent messages
    uint64_t sent_message_count_ = 0;

    // Final status code of the attempt
    absl::StatusCode status_code_;

    // Counters for incoming and outgoing bytes (atomic for thread safety)
    std::atomic<uint64_t> incoming_bytes_{0};
    std::atomic<uint64_t> outgoing_bytes_{0};
  };

  // Creates a new OpenCensusCallTracer for the given path and arena.
  explicit OpenCensusCallTracer(grpc_core::Slice path, grpc_core::Arena* arena,
                                bool tracing_enabled);
  ~OpenCensusCallTracer() override;

  // Returns the trace ID in hexadecimal format.
  std::string TraceId() override {
    return context_.Context().trace_id().ToHex();
  }

  // Returns the span ID in hexadecimal format.
  std::string SpanId() override { return context_.Context().span_id().ToHex(); }

  // Returns whether this span is sampled for tracing.
  bool IsSampled() override { return context_.Span().IsSampled(); }

  // Generates the OpenCensus context for this call.
  void GenerateContext();
  // Starts a new attempt tracer for this call.
  OpenCensusCallAttemptTracer* StartNewAttempt(
      bool is_transparent_retry) override;
  // Records a text annotation.
  void RecordAnnotation(absl::string_view annotation) override;
  // Records a structured annotation.
  void RecordAnnotation(const Annotation& annotation) override;

  // Records API latency and status code for the call.
  void RecordApiLatency(absl::Duration api_latency,
                        absl::StatusCode status_code_);

 private:
  // Creates a new CensusContext for a call attempt.
  experimental::CensusContext CreateCensusContextForCallAttempt();

  // The gRPC path/method being called
  grpc_core::Slice path_;
  // The method name (view into path_)
  absl::string_view method_;
  // OpenCensus context for this call
  experimental::CensusContext context_;
  // Arena for memory allocation
  grpc_core::Arena* arena_;
  // Whether tracing is enabled for this call
  const bool tracing_enabled_;
  // Mutex for thread-safe access to member variables
  grpc_core::Mutex mu_;

  // Number of retries (guarded by mu_)
  uint64_t retries_ ABSL_GUARDED_BY(&mu_) = 0;

  // Number of transparent retries (guarded by mu_)
  uint64_t transparent_retries_ ABSL_GUARDED_BY(&mu_) = 0;

  // Delay between retries (guarded by mu_)
  absl::Duration retry_delay_ ABSL_GUARDED_BY(&mu_);
  // Time when the last attempt ended (guarded by mu_)
  absl::Time time_at_last_attempt_end_ ABSL_GUARDED_BY(&mu_);
  // Number of currently active RPCs (guarded by mu_)
  uint64_t num_active_rpcs_ ABSL_GUARDED_BY(&mu_) = 0;
};

}  // namespace internal
}  // namespace grpc

#endif
```